# di-ag

./: .gitignore  Cargo.toml  README.md
crates/di-ag-cli/: Cargo.toml
crates/di-ag-cli/src/: main.rs
crates/di-ag-cli/src/commands/: convert.rs  dsl_emit.rs  extract_cmd.rs  fmt.rs  icons.rs  init.rs  mod.rs  render.rs  serve.rs  validate.rs
crates/di-ag-dsl/: Cargo.toml
crates/di-ag-dsl/src/: error.rs  grammar.pest  lib.rs  parser.rs  tests.rs
crates/di-ag-inspect/: Cargo.toml
crates/di-ag-inspect/src/: geometry.rs  lib.rs  report.rs  scoring.rs  tests.rs
crates/di-ag-ir/: Cargo.toml
crates/di-ag-ir/src/: document.rs  edge.rs  lib.rs  node.rs  port.rs  preset.rs  style.rs  tests.rs
crates/di-ag-layout/: Cargo.toml
crates/di-ag-layout/src/: force.rs  layered.rs  lib.rs  orthogonal.rs  post_pass.rs  scoring.rs  tests.rs
crates/di-ag-render/: Cargo.toml
crates/di-ag-render/src/: icons.rs  lib.rs  png.rs  shapes.rs  svg.rs  tests.rs  theme.rs
crates/di-ag-validate/: Cargo.toml
crates/di-ag-validate/src/: lib.rs  report.rs  rules.rs  tests.rs
crates/di-ag-wasm/: Cargo.toml
crates/di-ag-wasm/src/: lib.rs
docs/superpowers/plans/: 2026-03-29-di-ag-phase1.md
docs/superpowers/specs/: 2026-03-28-di-ag-design.md
examples/: architecture.diag  simple_flowchart.diag
web/public/: index.html
