[workspace]
resolver = "2"
members = [
    "crates/di-ag-ir",
    "crates/di-ag-dsl",
    "crates/di-ag-layout",
    "crates/di-ag-render",
    "crates/di-ag-validate",
    "crates/di-ag-inspect",
    "crates/di-ag-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kickthemoon0817/di-ag"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
