[package]
name = "di-ag"
version.workspace = true
edition.workspace = true

[[bin]]
name = "di-ag"
path = "src/main.rs"

[dependencies]
di-ag-ir = { path = "../di-ag-ir" }
di-ag-dsl = { path = "../di-ag-dsl" }
di-ag-layout = { path = "../di-ag-layout" }
di-ag-render = { path = "../di-ag-render" }
di-ag-validate = { path = "../di-ag-validate" }
di-ag-inspect = { path = "../di-ag-inspect" }
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
